--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+#map {
+  position: relative;
+  padding-top: 20px;
+  width: 100%;
+  height: 500px;
+  z-index: 1;
+}
+ 
+
+#info {
+  position: absolute;
+  padding: 5px;
+  border: 1px solid rgb(148, 145, 145);
+  width: 80px;
+  z-index: 100;
+  font-size: 0.6em;
+  color:white;
+  font-weight: bold;
+  background-color: gray;
+  opacity: 80%;
+}
+#sidebar{
+background-color: lightblue;
+
+padding: 10px;
+margin-top: 20px;
+
+}
+label{
+  padding: 2px;
+  margin:2px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
